ingress_tls_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - "app.example.com"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        port:
          number: 8080
        host: first-app-v1
