ingress_virtual_service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtual-service-ingress
spec:
  hosts:
    - "*"
  gateways:
    - app-ingressgateway
  http:
    - route:
        - destination:
            host: first-app-v1
